k8s-webhook/examples/deployment-with-certmanager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example1
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook1
  annotations:
    cert-manager.io/inject-ca-from: example1/demo-webhook
webhooks:
- name: proxy-env.hegerdes.com
  admissionReviewVersions: [v1]
  clientConfig:
    service:
      name: test-k8s-admission
      namespace: example1
      path: /add-proxy-env
      port: 80
  rules:
  - apiGroups: [""]
    apiVersions: [v1]
    operations: [CREATE, UPDATE]
    resources: [pods]
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example1
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo
    spec:
      containers:
        - name: k8s-admission
          image: "hegerdes/k8s-admission:latest"
          imagePullPolicy: IfNotPresent
          command: [/k8s-admission, --tls-private-key-file, /var/certs/tls.key, --tls-cert-file, /var/certs/tls.crt, --port, "8080" ]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: "/var/certs"
              name: certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: demo-k8s-admission-cert
---
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: demo
